# take-nagcl

./: .gitignore  .mcp.json  AGENTS.md  README.md  dgcn3_export_predictions.py  main.py  pyproject.toml  requirements.txt  run_tiage_with_timestamp.py  run_training_debug.ps1
demo/tiage-1/: export_take_dataset.py
dialogen/TAKE/: CumulativeTrainer.py  Model.py  Run.py  TransformerSeqEncoderDecoder.py  Utils.py  gpt2Dataset.py
dialogen/dataset/: Utils_TAKE.py
dialogen/evaluation/: Eval_Bleu.py  Eval_F1.py  Eval_Meteor.py  Eval_Rouge.py  F1.py
discuss/: 20260118_時間片切分_訓練驗證測試_規劃.md
docs/: 20260118需求.md  20260118需求_覆核報告.md  ALGORITHM_ARCHITECTURE.md  ALGORITHM_FLOW.md  COMMAND_LINE_GUIDE.md  DGCN3_tiage_centrality_spec.md  IMPLEMENTATION_PLAN.md  TAKE_Tiage_需求對照_算法流程_可運行指南.md  TRAINING_GUIDE.md  TRAINING_GUIDE_WINDOWS.md  完整產出說明_Tiage_uv版.md  完整訓練測試流程_Tiage_uv版.md  腳本運行指南_Tiage_時間片切分版.md
knowSelect/TAKE/: CentralityEncoder.py  CentralityLoader.py  CumulativeTrainer.py  Dataset.py  Model.py  Run.py  ShiftAnswerGenerator.py  TransformerSeqEncoderDecoder.py  Utils.py  evaluate_topic_shift.py  summarize_ablation.py
knowSelect/dataset/: Utils_TAKE.py
knowSelect/evaluation/: Eval_Meteor.py
results/run_20260103_160927/: timestamp.txt
scripts/: README.md
scripts/unix/: conda_infer.sh  conda_train.sh  uv_generate_tiage_split.sh  uv_run_export_centrality_tiage.sh  uv_run_generate_shift_answers_tiage.sh  uv_run_take_tiage_infer.sh  uv_run_take_tiage_train.sh  uv_run_tiage_train_test.sh  uv_setup.sh  (+1 more)
tools/: generate_tiage_split_by_dialog_slices.py
(+19 files in other folders)
