[project]
name = "coling2022-take"
version = "0.0.0"
description = "TAKE: Topic-shift Aware Knowledge sElection for Dialogue Generation (COLING 2022)"
requires-python = ">=3.9"
dependencies = [
  "torch==2.0.1",
  "torchvision==0.15.2",
  "torchaudio==2.0.2",
  "transformers==4.15.0",
  "scikit-learn>=0.24.0",
  "nltk>=3.6.0",
  "tqdm>=4.60.0",
  "rouge-score>=0.0.4",
  "sacrebleu>=2.0.0",
  "pandas>=1.3.0",
]
